# flaskr-tdd

./: .gitignore  Makefile  README.md  create_db.py  flaskr.db  pyproject.toml  requirements.txt
project/: app.py  flaskr.db
project/static/: main.js  style.css
project/templates/: base.html  index.html  login.html  search.html
tests/: app_test.py
